--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.10.14",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   }
 }
