--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "sequelize": "^6.5.0"
   }
